scrollable cards update: - added overflow scroll - fixed empty spaces from the side with padding on individual elements

--- a/styles.css
+++ b/styles.css
@@ -176,21 +176,23 @@ AUCTION ARTICLE
 */
 
 #auction {
-    display: none;
+    display: flex;
     flex-direction: column;
     margin-top: var(--margin-top);
-    padding: 0 10%;
 }
 
 #auction > h2 {
+    padding: 0 10%;
     font-size: 2.4em;
     font-weight: 500;
 }
 
 #auction > p {
+    padding: 0 10%;
     margin-top: 20px;
     font-size: 1.2em;
     font-weight: 400;
+    color: var(--text-color-grey);
 }
 
 #auction p span {
@@ -198,11 +200,13 @@ AUCTION ARTICLE
 }
 
 .cards {
+    padding: 0 10%;
     margin-top: 40px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     column-gap: 40px;
+    overflow: scroll;
 }
 
 .table {
@@ -222,7 +226,7 @@ AUCTION ARTICLE
 
 .table-grid {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(2, auto);
 }
 
 .grid-row-first > p:first-child {
@@ -231,7 +235,6 @@ AUCTION ARTICLE
 }
 
 .grid-row-first > p:nth-child(2) {
-    grid-column: 3 / 4;
     color: var(--text-color-grey);
     font-size: 0.7em;
     justify-self: end;
@@ -243,7 +246,6 @@ AUCTION ARTICLE
 }
 
 .grid-row-second > div {
-    grid-column: 3 / 4;
     display: flex;
     gap: 10px;
     justify-content: end;
@@ -252,7 +254,7 @@ AUCTION ARTICLE
 .grid-row-second div p {
     font-size: 1.2em;
     font-weight: 500;
-    text-align: end;
+    justify-content: end;
 }
 
 .grid-row-third > p:first-child {
@@ -261,7 +263,6 @@ AUCTION ARTICLE
 }
 
 .grid-row-third > p:nth-child(2) {
-    grid-column: 3 / 4;
     color: var(--text-color-grey);
     font-size: 1em;
     justify-self: end;
